# certificacion-presupuestaria

./: .gitignore  README.md  angular.json  package-lock.json  package.json
.github/workflows/: release.yml
public/: personal_con_correos.xlsx
scripts/: create-admin.mjs
server/: .env.example  Dockerfile  package-lock.json  package.json
server/src/: auth.ts  db.ts  index.ts  middleware.ts
server/src/routes/: auth.ts  certificaciones.ts  cuentas.ts  dependencias.ts  modificaciones.ts  observaciones.ts  proyectos.ts  reportes.ts  sync.ts  tipo-cuentas.ts  unidades.ts  usuarios.ts
src/: index.html  styles.css
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: api_forward.rs  auth.rs  db.rs  lib.rs  models.rs  sync.rs
src-tauri/src/commands/: auth_cmd.rs  certificaciones.rs  cuentas.rs  mod.rs  modificaciones.rs  observaciones.rs  proyectos.rs  reportes.rs  sync_cmd.rs  tipo_cuentas.rs  unidades.rs  usuarios.rs
src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
src/app/core/guards/: role.guard.ts
src/app/core/models/: auth.model.ts  certificacion.model.ts  cuenta.model.ts  index.ts  modificacion.model.ts  observacion.model.ts  proyecto.model.ts  reporte.model.ts  sync.model.ts  unidad.model.ts  usuario.model.ts
src/app/core/services/: auth.service.ts  certificacion.service.ts  cuenta.service.ts  modificacion.service.ts  observacion.service.ts  proyecto.service.ts  reporte.service.ts  sync.service.ts  tipo-cuenta.service.ts  toast.service.ts  unidad.service.ts  update.service.ts  usuario.service.ts
(+19 files in other folders)
